--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <% if current_user %>
+      <li><%= link_to "登出", destroy_user_session_path, method: :delete, class:"btn" %></li>
+    <% else %>
+      <li><%= link_to "註冊", new_user_registration_path, class:"btn" %></li>
+      <li><%= link_to "登入", new_user_session_path, class:"btn" %></li>
+    <% end %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
